Fix misaligned title.

--- a/assets/style.css
+++ b/assets/style.css
@@ -63,9 +63,9 @@ main {
 }
 
 /* Header */
-#site-header .container {padding: 0; display: flex; flex-direction: column; align-items: stretch; justify-content: space-between;}
-#site-header h1 {font-size: 2em; padding: 1rem; margin: 0;}
-#site-header nav {padding: 0; background-color: #188100; display: flex; flex-direction: row; align-items: center;}
+#site-header .container {display: flex; flex-direction: column; align-items: stretch; justify-content: space-between;}
+#site-header h1 {font-size: 2em; margin: 0;}
+#site-header nav {margin: -1em; margin-top: 1em; background-color: #188100; display: flex; flex-direction: row; align-items: center;}
 #site-header nav a {margin: 1em;}
 #site-header nav a:not(:last-child) {margin-right: 0;}
 
@@ -83,6 +83,9 @@ img {width: 100%; max-width: 100%;}
 @media screen and (min-width:35em) {
     #site-header .container {
         flex-direction: row;
+    }
+    #site-header nav {
+        margin-top: -1em;
     }
     #site-header nav a {
         margin: 1.5em;
